--- a/src/main/resources/sample/weatherapp/styles.css
+++ b/src/main/resources/sample/weatherapp/styles.css
@@ -1,9 +1,9 @@
 /* styles.css */
-.label {
-  -fx-border-color: black;
-  -fx-border-width: 1px;
-  -fx-padding: 5px;
-}
+/*.label {*/
+/*  -fx-border-color: black;*/
+/*  -fx-border-width: 1px;*/
+/*  -fx-padding: 5px;*/
+/*}*/
 
 .label1 {
   -fx-background-color: lightblue;
