--- a/src/main/resources/sample/weatherapp/views/SettingsDialog.fxml
+++ b/src/main/resources/sample/weatherapp/views/SettingsDialog.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.weatherapp.SettingsDialogController">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.weatherapp.controllers.SettingsDialogController">
   <children>
     <ComboBox fx:id="localeComboBox" />
     <Button text="Save" onAction="#handleSaveAction" />
