--- a/src/main/resources/sample/weatherapp/views/weatherApp.fxml
+++ b/src/main/resources/sample/weatherapp/views/weatherApp.fxml
@@ -9,8 +9,8 @@
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
-  fx:controller="sample.weatherapp.WeatherAppController"
-  stylesheets="@styles.css">
+  fx:controller="sample.weatherapp.controllers.WeatherAppController"
+  stylesheets="@../styles.css">
   <left>
     <VBox spacing="10.0" style="-fx-background-color: #f0f0f0;" prefWidth="100.0">
       <padding>
