--- a/src/main/resources/sample/weatherapp/views/mainAppView.fxml
+++ b/src/main/resources/sample/weatherapp/views/mainAppView.fxml
@@ -8,22 +8,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
   fx:controller="sample.weatherapp.controllers.MainAppController"
   stylesheets="@../styles/styles.css">
-  <left>
-    <VBox spacing="10.0" style="-fx-background-color: #f0f0f0;" prefWidth="100.0">
-      <padding>
-        <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
-      </padding>
-      <Label text="Menu"/>
-      <Button text="Settings" onAction="#openSettingsDialog" />
-      <Button text="C1"/>
-      <Button text="C2"/>
-      <Button text="C3"/>
-      <Button text="C4"/>
-    </VBox>
-  </left>
+
   <top>
     <HBox spacing="10.0" style="-fx-background-color: #d3d3d3;">
       <padding>
@@ -32,6 +23,16 @@
       <Label text="City:"/>
       <TextField fx:id="cityTextField" promptText="Enter city name"/>
       <Button fx:id="buttonGetWeather" onAction="#onGetWeatherButtonClick"/>
+      <Region HBox.hgrow="ALWAYS"/>
+      <Button fx:id="settingsButton" prefWidth="24" prefHeight="24" onAction="#openSettingsDialog">
+      <graphic>
+        <ImageView fx:id="settingsIcon" fitHeight="16" fitWidth="16"  pickOnBounds="true" preserveRatio="true">
+          <image>
+            <Image url="@../img/settingsButton.png"/>
+          </image>
+        </ImageView>
+      </graphic>
+      </Button>
     </HBox>
   </top>
   <center>
@@ -48,3 +49,5 @@
     </VBox>
   </center>
 </BorderPane>
+
+
