--- a/src/main/resources/sample/weatherapp/views/mainAppView.fxml
+++ b/src/main/resources/sample/weatherapp/views/mainAppView.fxml
@@ -13,7 +13,8 @@
 <?import javafx.scene.image.ImageView?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
   fx:controller="sample.weatherapp.controllers.MainAppController"
-  stylesheets="@../styles/light-theme.css">
+  onKeyPressed="#onGetWeatherKeyPressed"
+  stylesheets="@../styles/styles.css">
 
   <top>
     <HBox spacing="10.0" style="-fx-background-color: #d3d3d3;">
@@ -21,7 +22,7 @@
         <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
       </padding>
       <Label fx:id="cityLabel" />
-      <TextField fx:id="cityTextField" promptText="Enter city name"/>
+      <TextField fx:id="cityTextField" promptText="Enter city name" />
       <Button fx:id="buttonGetWeather" onAction="#onGetWeatherButtonClick"/>
       <Region HBox.hgrow="ALWAYS"/>
       <Button fx:id="settingsButton" prefWidth="24" prefHeight="24" onAction="#openSettingsDialog">
