--- a/src/main/resources/sample/weatherapp/views/forecastTableView.fxml
+++ b/src/main/resources/sample/weatherapp/views/forecastTableView.fxml
@@ -6,15 +6,18 @@
 <?import javafx.scene.control.TableView?>
 
 <?import javafx.geometry.Insets?>
-<VBox fx:controller="sample.weatherapp.controllers.ForecastTableController" xmlns:fx="http://javafx.com/fxml" style="-fx-background-color: lightgray"  spacing="10.0" VBox.vgrow="ALWAYS">
+<VBox fx:controller="sample.weatherapp.controllers.ForecastTableController"
+  xmlns:fx="http://javafx.com/fxml" style="-fx-background-color: lightgray" spacing="10.0"
+  VBox.vgrow="ALWAYS">
   <padding>
     <Insets top="5.0" right="5.0" bottom="5.0" left="5.0"/>
   </padding>
-  <Label fx:id="tableForecastLabel"  style="-fx-font-size: 12px; -fx-font-weight: bold;" text="5 Day Forecast"/>
+  <Label fx:id="tableForecastLabel" style="-fx-font-size: 12px; -fx-font-weight: bold;"
+    text="5 Day Forecast"/>
   <TableView fx:id="forecastTableView" VBox.vgrow="ALWAYS">
     <columns>
       <TableColumn fx:id="dateTimeColumn" text="Date/Time"/>
-      <TableColumn fx:id="iconColumn" text="Temperature" />
+      <TableColumn fx:id="iconColumn" text="Temperature"/>
       <!--TableColumn fx:id="temperatureColumn" text="Temperature"/-->
       <TableColumn fx:id="humidityColumn" text="Humidity"/>
       <TableColumn fx:id="descriptionColumn" text="Description"/>
