--- a/src/main/resources/sample/weatherapp/views/settingsDialogView.fxml
+++ b/src/main/resources/sample/weatherapp/views/settingsDialogView.fxml
@@ -2,13 +2,23 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TextField?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="sample.weatherapp.controllers.SettingsDialogController"
+  fx:controller="sample.weatherapp.controllers.SettingsDialogController"  prefWidth="300"  stylesheets="@../styles/styles.css" styleClass="settings-view"
 >
   <children>
-    <ComboBox fx:id="localeComboBox"/>
+    <Label text="API Key" />
+    <TextField fx:id="apiKeyTextField" prefWidth="200"/>
+    <Label text="Default City" />
+    <TextField fx:id="defaultCityTextField" prefWidth="200"/>
+    <Label>Language:</Label>
+    <ComboBox fx:id="localeComboBox" prefWidth="270" />
+
+
     <Button text="Save" onAction="#handleSaveAction"/>
   </children>
   <padding>
